Fixed section spacing

--- a/stylesheet.css
+++ b/stylesheet.css
@@ -7,7 +7,7 @@
     color: black;
 }
 
-.section{
+#content{
     padding-top: 50px;
 }
 
